[KL-441] fix  announcement's z-index

--- a/src/app/header/sidebar-menu/sidebar-menu.component.scss
+++ b/src/app/header/sidebar-menu/sidebar-menu.component.scss
@@ -12,7 +12,7 @@
     bottom: 0;
     background: rgba(#000, 0.8);
     cursor: pointer;
-    z-index: 10;
+    z-index: 20;
     animation: fadeIn 0.3s ease;
   }
 
@@ -36,7 +36,7 @@
   padding: 20px 20px 60px;
   background: #fff;
   box-sizing: border-box;
-  z-index: 11;
+  z-index: 21;
   transform: translate3d(-100%, 0, 0);
   transition: all 0.5s ease;
   overflow: auto;
